# ral

./: .gitignore  CMakeLists.txt  README.md  clang-format.cmake  compile-grammar.sh  compile.sh  dev.sh
data/: 1-empty.kum  2-empty-functions.kum  28-rec-nod.kum  t.kum  test-commands.txt  test.ral  test_input.ral
doc/: ral.xml
libstdral/: CMakeLists.txt  stdral.cpp  stdral.h
src/: CLIManager.hpp  JIT.hpp  ObjectEmitter.hpp  main.cpp  ralconsts.h  ralexceptions.h  typeconvertions.cpp  typeconvertions.h  utils.cpp  utils.h
src/exceptions/: NotImplementedException.hpp  VariableNotFoundException.hpp
src/grammar/: RalLexer.g4  RalParser.g4  Visitor.cpp  Visitor.hpp  ast.cpp  ast.h  astbuildervisitor.cpp  astbuildervisitor.h  declarationvisitor.cpp  declarationvisitor.h  generatorbasevisitor.cpp  generatorbasevisitor.h  irdeclarationgenerator.cpp  irdeclarationgenerator.h  irgenerator.cpp  irgenerator.h  parsererrorlistener.cpp  parsererrorlistener.h  typecheckvisitor.cpp  typecheckvisitor.h
src/grammar/runtime/: RalLexer.cpp  RalLexer.h  RalParser.cpp  RalParser.h  RalParserBaseVisitor.cpp  RalParserBaseVisitor.h  RalParserVisitor.cpp  RalParserVisitor.h
src/logic/: Scope.cpp  Scope.hpp  compiler.cpp  compiler.h  debuginfo.cpp  debuginfo.h  symboltable.cpp  symboltable.h
test/: 17-downto-fixed.kum  25-rec-hanoi.kum  8-if.kum  dev-loop.kum  dev-stdral.kum  dev-test.kum  dev-type.kum  f01-bad-alg-arg-type.kum  f02-bad-comparison-string.kum  f03-bad-logical-type.kum  f04-alg-void-return.kum  f05-alg-return-type-mismatch.kum  f06-if-type-mismatch.kum  f07-for-type-mismatch.kum  f08-for-no-index.kum  run-tests.sh
test/expected/: 24-func-prime.txt  dev-loop.txt  dev-stdral.txt  dev-test.txt  dev-type.txt
